# docs/api/openapi.v1.json
@@ -6371,6 +6371,15 @@
               "null",
               "string"
             ]
+          },
+          "reminderDays": {
+            "pattern": "^-?(?:0|[1-9]\\d*)$",
+            "type": [
+              "null",
+              "integer",
+              "string"
+            ],
+            "format": "int32"
           }
         }
       },
